<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/bg_grad1"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >

  <TextView
    android:id="@+id/tv_question_fb"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textColor="@color/colorWhite"
    android:text="@string/str_are_you_sure_fb"
    android:textSize="18sp"
    android:layout_marginTop="@dimen/res_24dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/btn_accept"
    />

  <Button
    android:id="@+id/btn_accept"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_accept"
    android:textColor="@color/goldenBrownLawyer"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginTop="@dimen/res_24dp"
    android:layout_marginBottom="@dimen/res_24dp"
    android:background="@drawable/bg_transparent_silver"
    app:layout_constraintTop_toBottomOf="@id/tv_question_fb"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/btn_decline"
    app:layout_constraintBottom_toBottomOf="parent"
    />

  <Button
    android:id="@+id/btn_decline"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_decline"
    android:textColor="@color/charcoalLawyer"
    android:layout_marginStart="@dimen/res_18dp"
    android:layout_marginEnd="@dimen/res_24dp"
    android:layout_marginTop="@dimen/res_24dp"
    android:layout_marginBottom="@dimen/res_24dp"
    android:background="@drawable/bg_transparent_silver"
    app:layout_constraintTop_toBottomOf="@id/tv_question_fb"
    app:layout_constraintStart_toEndOf="@id/btn_accept"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>