<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/charcoalLawyer"
  android:theme="@style/LoginTheme"
  >

  <ImageView
    android:id="@+id/img_registration"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_launcher_logo"
    android:layout_marginTop="?android:attr/actionBarSize"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/til_first_name"
    />

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_first_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColorHint="@color/colorWhite"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/img_registration"
    app:layout_constraintBottom_toTopOf="@id/til_last_name"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_first_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/str_first_name"
      android:inputType="text"
      android:maxLines="1"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_last_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColorHint="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/til_first_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/til_phone"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_last_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/str_last_name"
      android:inputType="text"
      android:maxLines="1"
      />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_phone"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColorHint="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/til_last_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/til_email"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_phone_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorWhite"
      android:hint="@string/str_phone_number"
      android:inputType="phone"
      android:maxLines="1"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColorHint="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/til_phone"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/til_password"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/str_e_mail"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/til_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:textColorHint="@color/colorWhite"
    app:layout_constraintTop_toBottomOf="@id/til_email"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/et_password_reg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/str_password"
      android:inputType="textPassword"
      android:maxLines="1"
      />

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/btn_sign_up"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_sign_up_now"
    android:layout_marginTop="@dimen/res_32dp"
    android:layout_marginBottom="@dimen/res_24dp"
    android:textColor="@color/charcoalLawyer"
    android:background="@drawable/bg_radius_transparent_white"
    app:layout_constraintTop_toBottomOf="@id/til_password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    />
</android.support.constraint.ConstraintLayout>