<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/charcoalLawyer"
  android:theme="@style/LoginTheme"
  android:fitsSystemWindows="true"
  >

<ImageView
  android:id="@+id/logo_lawyer"
  android:layout_width="0dp"
  android:layout_height="wrap_content"
  android:src="@drawable/logotulisan"
  android:paddingStart="16dp"
  android:paddingEnd="16dp"
  android:layout_marginTop="?attr/actionBarSize"
  android:layout_marginBottom="32dp"
  app:layout_constraintTop_toTopOf="parent"
  app:layout_constraintStart_toStartOf="parent"
  app:layout_constraintEnd_toEndOf="parent"
  app:layout_constraintBottom_toTopOf="@id/et_username"
  />
  <EditText
    android:id="@+id/et_username"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="Username"
    android:inputType="textEmailAddress"
    android:paddingStart="16dp"
    android:drawablePadding="16dp"
    android:drawableStart="@drawable/ic_email"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintTop_toBottomOf="@id/logo_lawyer"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/et_password"
    />
  <EditText
    android:id="@+id/et_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="Password"
    android:inputType="textPassword"
    android:paddingStart="16dp"
    android:drawablePadding="16dp"
    android:drawableStart="@drawable/ic_password"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:focusable="true"
    app:layout_constraintTop_toBottomOf="@id/et_username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/tv_forgot"
    />

  <TextView
    android:id="@+id/tv_forgot"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_forgot_password"
    android:textAlignment="textEnd"
    android:paddingEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="16dp"
    android:textColor="@color/strawLawyer"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/et_password"
    app:layout_constraintBottom_toTopOf="@id/btn_login"
    />

  <Button
    android:id="@+id/btn_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/action_sign_in"
    android:background="@drawable/bg_radius_transparent_white"
    android:textColor="@color/charcoalLawyer"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintTop_toBottomOf="@id/tv_forgot"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/tv_or"
    />
  <TextView
    android:id="@+id/tv_or"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/text_or"
    android:textAlignment="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintTop_toBottomOf="@id/btn_login"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/btn_facebook"
    />
  <Button
    android:id="@+id/btn_facebook"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_fblogin"
    android:background="@drawable/bg_radius_transparant_blue"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    app:layout_constraintTop_toBottomOf="@id/tv_or"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/tv_register_ask"
    />
  <TextView
    android:id="@+id/tv_register_ask"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_register"
    android:textAlignment="center"
    android:textColor="@color/strawLawyer"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="?attr/actionBarSize"
    app:layout_constraintTop_toBottomOf="@id/btn_facebook"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />
</android.support.constraint.ConstraintLayout>