<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bg_grad1"
  android:theme="@style/LoginTheme"
  android:fitsSystemWindows="true"
  >

  <ImageView
    android:id="@+id/img_logo"
    android:layout_width="240dp"
    android:layout_height="72dp"
    android:layout_marginTop="@dimen/res_18dp"
    android:paddingStart="@dimen/res_24dp"
    android:paddingEnd="@dimen/res_24dp"
    app:layout_goneMarginTop="@dimen/res_32dp"
    android:layout_marginBottom="@dimen/res_24dp"
    android:src="@drawable/logotulisan"
    app:layout_constraintBottom_toTopOf="@id/cv_container_create"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <android.support.v7.widget.CardView
    android:id="@+id/cv_container_create"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintBottom_toTopOf="@id/btn_cari_lawyer"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/img_logo"
    >

    <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/card_shape"
      android:padding="@dimen/res_9dp"
      android:paddingTop="@dimen/res_18dp"
      >

      <TextView
        android:id="@+id/spinner_bahasa"
        android:layout_width="0dp"
        android:text="@string/str_bahasa"
        android:textSize="18sp"
        android:textColor="@color/charcoalLawyer"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:background="@color/colorWhite"
        android:paddingStart="@dimen/res_9dp"
        android:paddingTop="@dimen/res_9dp"
        android:paddingBottom="@dimen/res_9dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/res_9dp"
        android:layout_marginEnd="@dimen/res_9dp"
        android:layout_marginStart="@dimen/res_9dp"
        android:layout_marginBottom="@dimen/res_9dp"
        app:layout_constraintBottom_toTopOf="@id/spinner_bidang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

      <TextView
        android:id="@+id/spinner_bidang"
        android:layout_width="0dp"
        android:text="@string/str_bidang"
        android:textColor="@color/charcoalLawyer"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:paddingStart="@dimen/res_9dp"
        android:paddingTop="@dimen/res_9dp"
        android:paddingBottom="@dimen/res_9dp"
        android:background="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/res_9dp"
        android:layout_marginEnd="@dimen/res_9dp"
        android:layout_marginBottom="@dimen/res_9dp"
        android:layout_marginTop="@dimen/res_9dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/til_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_bahasa"
        tools:listitem="Bidang"
        />

      <android.support.design.widget.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/res_9dp"
        android:layout_marginStart="@dimen/res_9dp"
        android:layout_marginTop="@dimen/res_9dp"
        android:layout_marginBottom="@dimen/res_9dp"
        app:layout_constraintBottom_toTopOf="@id/btn_maps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_bidang"
        >
        <android.support.design.widget.TextInputEditText
          android:id="@+id/et_deskripsi"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_deskripsi"
          android:inputType="text"
          />
      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/btn_maps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_location"
        android:layout_marginTop="@dimen/res_9dp"
        android:layout_marginBottom="@dimen/res_9dp"
        android:layout_marginStart="@dimen/res_9dp"
        android:layout_marginEnd="@dimen/res_9dp"
        android:textColor="@color/goldenBrownLawyer"
        android:background="@drawable/bg_transparent_silver"
        app:layout_constraintTop_toBottomOf="@id/til_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_maps"
        />

      <ImageView
        android:visibility="gone"
        android:id="@+id/img_maps"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginBottom="@dimen/res_9dp"
        app:layout_constraintTop_toBottomOf="@id/btn_maps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    </android.support.constraint.ConstraintLayout>

  </android.support.v7.widget.CardView>

  <Button
    android:id="@+id/btn_cari_lawyer"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/str_cari_lawyer"
    android:textColor="@color/goldenBrownLawyer"
    android:layout_marginStart="@dimen/res_24dp"
    android:layout_marginEnd="@dimen/res_24dp"
    android:layout_marginTop="@dimen/res_18dp"
    android:layout_marginBottom="@dimen/res_24dp"
    android:background="@drawable/bg_radius_transparant_silver"
    app:layout_constraintTop_toBottomOf="@id/cv_container_create"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />
</android.support.constraint.ConstraintLayout>